# ccw

./: .ccw  .gitignore  README.md  README_ja.md  pyproject.toml
docs/: spec.md
src/ccw/: __init__.py  speech.html  speech.py
